swim_common/src/form/tests/derive/form/generic_no_default.stderr
error[E0599]: the method `as_value` exists for struct `S<Valid, Skipped>`, but its trait bounds were not satisfied
  --> $DIR/generic_no_default.rs:35:15
   |
21 |     struct Skipped;
   |     --------------- doesn't satisfy `Skipped: Default`
...
24 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<Valid, Skipped>: Form`
...
35 |     let _ = s.as_value();
   |               ^^^^^^^^ method cannot be called on `S<Valid, Skipped>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Skipped: Default`
           which is required by `S<Valid, Skipped>: Form`
